--- a/static/style.css
+++ b/static/style.css
@@ -12,7 +12,7 @@
     color: #bb86fc;
   }
   h1, h2, h3, h4, h5, h6 {
-    color: #bb86fc;
+    color: #bb86fc !important;
   }
   .card {
     background-color: #1e1e1e;
