--- a/static/style.css
+++ b/static/style.css
@@ -2,6 +2,9 @@
     background-color: #121212;
     color: #e0e0e0;
   }
+  html, body {
+    overflow-x: hidden;
+  }
   .navbar, .footer {
     background-color: #1f1f1f;
   }
