--- a/static/style.css
+++ b/static/style.css
@@ -119,6 +119,11 @@
         color: #ffcc00;
         font-size: 20px;
         text-align: center;
+        position: absolute;
+        top: 100%; /* Start off-screen */
+        left: 0;
+        width: 100%;
+        height: 100%;
     }
 
     .card-img-container:hover .overlay {
