--- a/static/style.css
+++ b/static/style.css
@@ -9,7 +9,7 @@
     background-color: #1f1f1f;
   }
   .navbar-brand, .nav-link, .footer {
-    color: #e0e0e0;
+    color: #ffcc00;
   }
   a.nav-link:hover {
     color: #bb86fc;
