css file modified

--- a/static/style.css
+++ b/static/style.css
@@ -19,7 +19,7 @@
       padding-top: 70px; /* Adjust based on the height of your navbar */
     }
   }
-  h1, h2, h3, h4, h5, h6, {
+  h1, h2, h3, h4, h5, h6 {
     color: #bb86fc !important;
   }
   .card {
