--- a/static/style.css
+++ b/static/style.css
@@ -20,7 +20,7 @@
     }
   }
   h1, h2, h3, h4, h5, h6 {
-    color: #bb86fc !important;
+    color: #00FFFF !important;
   }
   .card {
     background-color: #1e1e1e;
