--- a/static/style.css
+++ b/static/style.css
@@ -110,7 +110,6 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .blog-card:hover {
-  background-color: #bb86fc;
   transform: scale(1.05); /* Slight zoom on hover */
   box-shadow: 0 8px 12px rgba(0, 0, 0, 0.3);
 }
@@ -130,7 +129,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .btn-primary:hover {
-  background-color: #e6b800; /* Darker Yellow on Hover */
+  background-color: #bb86fc; /* Darker Yellow on Hover */
 }
 
 #skills {
