--- a/static/style.css
+++ b/static/style.css
@@ -28,7 +28,7 @@ a.nav-link:hover {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  color: #bb86fc; /* Muted Yellow for Headings */
+  color: #bb86fc !important; /* Muted Yellow for Headings */
 }
 
 .card {
