--- a/static/style.css
+++ b/static/style.css
@@ -14,7 +14,7 @@ html, body {
 }
 
 .navbar-brand, .nav-link, .footer {
-  color: #ffcc00; /* Muted Yellow for Links & Navbar Text */
+  color: #a2e2e0; /* Muted Yellow for Links & Navbar Text */
 }
 
 a.nav-link:hover {
@@ -45,16 +45,16 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .card-title {
-  color: #ffcc00; /* Muted Yellow for Card Titles */
+  color: #a2e2e0; /* Muted Yellow for Card Titles */
 }
 
 .btn-primary {
-  background-color: #ffcc00; /* Muted Yellow for Buttons */
+  background-color: #a2e2e0; /* Muted Yellow for Buttons */
   border: none;
 }
 
 .btn-primary:hover {
-  background-color: #e6b800; /* Slightly Darker Yellow on Hover */
+  background-color: #a2e2e0; /* Slightly Darker Yellow on Hover */
 }
 
 #about {
@@ -95,7 +95,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #blog h2 {
-  color: #ffcc00; /* Muted Yellow for Blog Heading */
+  color: #a2e2e0; /* Muted Yellow for Blog Heading */
   font-size: 36px;
   margin-bottom: 40px;
 }
@@ -124,7 +124,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .btn-primary {
-  background-color: #ffcc00; /* Muted Yellow for Buttons */
+  background-color: #a2e2e0; /* Muted Yellow for Buttons */
   border: none;
 }
 
@@ -148,11 +148,11 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .progress-bar {
-  background-color: #ffcc00; /* Muted Yellow for Skill Progress Bars */
+  background-color: #a2e2e0; /* Muted Yellow for Skill Progress Bars */
 }
 
 .fab, .fas {
-  color: #ffcc00; /* Light Purple for Icons */
+  color: #a2e2e0; /* Light Purple for Icons */
 }
 
 #contact {
@@ -169,18 +169,18 @@ h1, h2, h3, h4, h5, h6 {
 
 .form-control {
   background-color: #333333; /* Dark Background for Input Fields */
-  border: 1px solid #ffcc00; /* Yellow Border */
+  border: 1px solid #a2e2e0; /* Yellow Border */
   color: #ffffff; /* Light Text */
 }
 
 .form-control:focus {
-  border-color: #ffcc00;
+  border-color: #a2e2e0;
   box-shadow: none;
 }
 
 .btn-warning {
-  background-color: #ffcc00;
-  border-color: #ffcc00;
+  background-color: #a2e2e0;
+  border-color: #a2e2e0;
 }
 
 .btn-outline-light:hover {
@@ -188,7 +188,7 @@ h1, h2, h3, h4, h5, h6 {
   color: #1f1f1f;
 }
 .btn-outline-primary {
-  content: #ffcc00;
+  content: #a2e2e0;
 }
 
 /* Thank You Message Styling */
