--- a/static/style.css
+++ b/static/style.css
@@ -53,7 +53,8 @@ a.nav-link:hover {
 }
 
 .btn-outline-warning:hover {
-  background-color:rgba(0, 0, 0, 0.3);
+  background-color: #000;
+  border-color: none;
   color:#ffffff;
 }
 
@@ -151,7 +152,7 @@ h1, h3, h4, h5, h6 {
 
 .form-control {
   background-color: #ffffff; /* Dark Background for Input Fields */
-  border: 1px solid #f4f4f4; /* Yellow Border */
+  border: 1px solid #a2e2e0; /* Yellow Border */
   color: #090102; /* Light Text */
 }
 
