--- a/static/style.css
+++ b/static/style.css
@@ -59,15 +59,15 @@ a.nav-link:hover {
 }
 
 .btn-outline-light:hover {
-  background-color: #ffffff;
-  color: #1f1f1f;
+  background-color: #090102;
+  color: #ffffff;
 }
 
 h1, h3, h4, h5, h6 {
-  color: #a2e2e0 !important; /* Muted Yellow for Headings */
+  color: #a2e2e0 !important; /* Mintfor Headings */
 }
 
-#contact h2, #skills h2, #blog h2, #about h2 {
+#contact h2, #skills h2, #blog h2, #about h2, #projects h2 {
   color: #bb86fc; /* Muted Purple for Section Heading */
   font-size: 36px;
   margin-bottom: 40px;
@@ -80,7 +80,7 @@ h1, h3, h4, h5, h6 {
 }
 
 .card {
-  background-color: #f4f4f4; /* Light Background for Cards */
+  background-color: #ffffff; /* Light Background for Cards */
   color: #090102; /* Light Text for Cards */
   border: none;
   border-radius: 10px;
