--- a/static/style.css
+++ b/static/style.css
@@ -88,6 +88,7 @@ h1, h3, h4, h5, h6 {
   border: none;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  min-height: 500px;
   transition: transform 0.2s ease;
 }
 
