--- a/static/style.css
+++ b/static/style.css
@@ -46,10 +46,18 @@ a.nav-link:hover {
   border-color: #a2e2e0;
 }
 
+.btn-warning:active {
+  background-color: #a2e2e0;
+}
+
 .btn-outline-warning {
   background-color: #ffffff;
   color: #090102;
   border-color: #090102;
+}
+
+.btn-outline-warning:active {
+  background-color: #a2e2e0;
 }
 
 .btn-outline-warning:hover {
