--- a/static/style.css
+++ b/static/style.css
@@ -4,7 +4,15 @@ body {
   color: #090102; /* Default light mode text color */
 }
 
-body.black {
+#switch {
+  background: none;
+  border: none;
+  cursor: pointer;
+  font-size: 24px;
+  color: #090102;
+}
+
+body.black, skills.black, about.black, contact.black, blog.black {
   background-color: black; /* Dark mode background */
   color: white; /* Dark mode text color */
 }
