--- a/static/style.css
+++ b/static/style.css
@@ -12,8 +12,8 @@ body {
   color: #090102;
 }
 
-body.black, #skills.black, #about.black, #contact.black, b#log.black {
-  background-color: black; /* Dark mode background */
+body.black, #skills.black, #about.black, #contact.black, #blog.black {
+  background-color: black !important; /* Dark mode background */
   color: white; /* Dark mode text color */
 }
 
