--- a/static/style.css
+++ b/static/style.css
@@ -164,7 +164,7 @@ h1, h3, h4, h5, h6 {
 }
 
 .progress-bar {
-  background-color: #a2e2e0; /* Muted Yellow for Skill Progress Bars */
+  background-color: #a2e2e0; /* Muted Mint for Skill Progress Bars */
 }
 
 .fab, .fas {
